tests/regression/errors/basic/syntax_error_8.csd
// Syntax error test 8 - missing semicolon
sus x drip = 8
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
